# hestiaos-calc-mcp

./: .gitattributes  .gitignore  AGENTS.md  CLEANROOM.md  LICENSE  NOTICE  README.md  entrypoint.py  pyproject.toml
.github/workflows/: ci.yml
calc_mcp/: __init__.py  ast_nodes.py  core.py  errors.py  kernel_worker.py  limits.py  numeric.py  parser.py  plot.py  plot_contract.py  plot_worker.py  server.py
calc_mcp/tiers/: __init__.py  symbolic.py  units.py
idris/: BUILD.md  Calc.idr  calc.ipkg  calc_wrapper.c  libcalc_main.idr  test_main.idr
tests/: conftest.py  test_core_exact.py  test_determinism.py  test_golden.py  test_kernel_supervisor.py  test_large_integer_regression.py  test_mcp_contract.py  test_numeric.py  test_parser.py  test_perf_smoke.py  test_plot.py  test_properties.py  test_security.py  test_stdout_hygiene.py  test_tiers_symbolic.py  test_tiers_units.py
