[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["calc_mcp*"]

[project]
name = "calc-mcp"
version = "0.9.0"
description = "A deterministic, always-valid arithmetic MCP server"
requires-python = ">=3.10"
dependencies = ["mcp"]
license = "Apache-2.0"

[project.optional-dependencies]
symbolic = ["sympy", "mpmath"]
units = ["pint"]
dev = ["pytest", "hypothesis", "psutil"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
